added heading, removed duplicate vis

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!-- Styles -->
-<style>
-    #chartdiv {
-        width: 100%;
-        height: 600px;
-    }
-</style>
-
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
+<!-- Resources -->
+<script src="https://cdn.amcharts.com/lib/5/index.js"></script>
+<script src="https://cdn.amcharts.com/lib/5/flow.js"></script>
+<script src="https://cdn.amcharts.com/lib/5/themes/Animated.js"></script>
 <!-- Resources -->
 <script src="https://cdn.amcharts.com/lib/5/index.js"></script>
 <script src="https://cdn.amcharts.com/lib/5/flow.js"></script>
@@ -13,10 +12,16 @@
 
 <!-- Chart code -->
 <script src="sankeyPub.js"></script>
-
-<script src="sankeyTopic.js"></script>
+<!-- <br>
+<br>
+<script src="sankeyTopic.js"></script> -->
 
 
 <!-- HTML -->
-<div id="chartdivpub"></div>
-<div id="chartdivtopic"></div>
+<body>
+    <h2>Media article distribution among top publishers</h2>
+    <h3>(Financial Well-being)</h3>
+    <div id="chartdivpub"></div>
+</body>
+
+<!-- <div id="chartdivtopic"></div> -->
